Added some more styling this will be almost the last I will do before backend work and after that a redesign

--- a/Static/index.html
+++ b/Static/index.html
@@ -16,7 +16,7 @@
 
       <ul class="menu">
         <li class="selected">Home</li>
-        <li>catogry <ul>
+        <li class="drop">catogry <ul>
             <li>Superme</li>
             <li>Clean</li>
             <li>Fun stuff 😳</li>
@@ -32,13 +32,105 @@
     </div>
     <div class="personalmenu">
 
-        <p>account</p>
+      <p>account</p>
 
 
-        <p>Winkelwagen: 0,00</p>
+      <p>Winkelwagen: 0,00</p>
 
     </div>
   </header>
+  <main>
+    <div class="herowrap">
+      <div class="hero">
+        <p>RubyStore</p>
+      </div>
+    </div>
+    <div class="productRow">
+      <div class="productWrap">
+        <div class="product">
+          <img src="https://source.unsplash.com/random/800x600" alt="random image" loading=lazy>
+          <p>supreme crowbar</p>
+
+        </div>
+        <button>buy</button>
+      </div>
+
+      <div class="productWrap">
+        <div class="product">
+          <img src="https://source.unsplash.com/random/800x600" alt="random image" loading=lazy>
+          <p>supreme crowbar</p>
+
+        </div>
+        <button>buy</button>
+      </div>
+      <div class="productWrap">
+        <div class="product">
+          <img src="https://source.unsplash.com/random/800x600" alt="random image" loading=lazy>
+          <p>supreme crowbar</p>
+
+        </div>
+        <button>buy</button>
+      </div>
+    </div>
+    <div class="productRow">
+      <div class="section">
+        <h1>Sale</h1>
+    <div class="productRow expandable">
+      <div class="productWrap">
+        <div class="product">
+          <img src="https://source.unsplash.com/random/800x600" alt="random image" loading=lazy>
+          <p>supreme crowbar</p>
+
+        </div>
+        <button>buy</button>
+      </div>      <div class="productWrap">
+        <div class="product">
+          <img src="https://source.unsplash.com/random/800x600" alt="random image" loading=lazy>
+          <p>supreme crowbar</p>
+
+        </div>
+        <button>buy</button>
+      </div>
+      
+    </div>
+  </div>
+    <div class="section small">
+      <h1>SALE!</h1>
+      <div class="productWrap">
+        <div class="product">
+          <img src="https://source.unsplash.com/random/800x600" alt="random image" loading=lazy>
+          <p>supreme crowbar</p>
+
+        </div>
+        <button>buy</button>
+      </div>
+    </div>
+  </div>
+
+  </main>
+  <footer>
+    <ul>
+      <li><p>responsivebilty</p></li>
+      <li><p>responsivebilty</p></li>
+      </ul>
+      <ul>
+      <li><p>responsivebilty</p></li>
+      <li><p>responsivebilty</p></li>
+    </ul>
+    <ul>
+
+      <li><p>responsivebilty</p></li>
+      <li><p>responsivebilty</p></li>
+    </ul>
+    <ul>
+
+      <li><p>responsivebilty</p></li>
+      <li><p>responsivebilty</p></li>
+    </ul>
+    <div>
+      <p>copyright 2021 Mark Heijnekamp</p>
+    </div>
+  </footer>
 </body>
 
 </html>
